[package]
name = "reconwin"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.14.0"
sysinfo = "0.26.7"
colored = "2.0.0"
chrono = "0.4.23"
winreg = "0.10"
local-ip-address = "0.4.9"
cli-clipboard = "0.3.0"
directories = "4.0.1"
walkdir = "2"
evtx = "0.8.0"
xml-rs = "0.8"
is-root = "0.1.2"
ipconfig = "0.3.1"
battery = "0.7.8"
